# Scrabble

./: Cargo.toml  rules.txt
src/: client.rs  constants.rs  lib.rs  main.rs  players.rs
src/gameserver/: board.rs  gamestate.rs  mod.rs  players.rs  server_player.rs
